<resources>
    <string name="app_name">Template Android</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_message">Unable to fetch podcasts feeds.\nCheck your internet connection and try again.</string>
    <string name="retry_label">Retry</string>

    <string name="action_load_ads">This action can contain ads</string>

    <string name="title_force_update">New version available!</string>
    <string name="description_force_update">Please, update app to new version to continue.</string>
    <string name="no_thanks_force_update">No, thanks</string>
    <string name="update_force_update">Update</string>

    <string name="language">Language</string>
    <string name="sub_language">Please choose your native language. You can change language from settings later.</string>

    <string name="title_intro1">Recover all deleted photos and videos.</string>
    <string name="title_intro2">Recover easily and quickly</string>
    <string name="title_intro3">Automatically search and recovery all</string>
    <string name="title_intro4">Automatically search and recovery all</string>

    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="setting">Setting</string>
    <string name="rating">Rating</string>
    <string name="share_to_friends">Share to friends</string>
    <string name="privacy">Privacy</string>
    <string name="term_of_use">Term of Use</string>

    <string name="txt_ok">OK</string>
    <string name="rate">Rate</string>
    <string name="not_now">Not now</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="give_us_a_quick_rating">Give us a quick rating so we know if you like it.</string>
    <string name="thanks_for_the_rating">Thanks for the Rating</string>
    <string name="we_are_working_hard">We are working hard for a better user experience.</string>
    <string name="that_great_to_hear">That great to hear you are satisfied with the product.</string>
    <string name="thanks_for_rating">Thanks for your rating!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>


</resources>