<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_default"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp">

        <TextView
            style="@style/BaseTextView_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/title_force_update"
            android:textSize="20sp" />

        <TextView
            style="@style/BaseTextView_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/description_force_update"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoThanks"
                style="@style/BaseTextView_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/no_thanks_force_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:textAllCaps="true" />

            <TextView
                android:id="@+id/tvUpdate"
                style="@style/BaseTextView_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:padding="8dp"
                android:text="@string/update_force_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>