<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_dialog_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_title"
                style="@style/BaseTextView_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:gravity="center"
                android:text="@string/do_you_like_our_app"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/text_title_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/that_great_to_hear"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/lin_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />


            <LinearLayout
                android:id="@+id/lin_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription">

                <ImageView
                    android:id="@+id/img_star_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/star_fill" />

                <ImageView
                    android:id="@+id/img_star_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/star_fill" />

                <ImageView
                    android:id="@+id/img_star_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/star_fill" />

                <ImageView
                    android:id="@+id/img_star_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/star_fill" />

                <ImageView
                    android:id="@+id/img_5_star"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/star_fill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin_star">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRate"
                    style="@style/BaseTextView_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_ad_normal"
                    android:text="@string/rate"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btnNotNow"
                    style="@style/BaseTextView_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/not_now"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/ic_rating_smile_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>